lab1/Test/L1-A-13-37.output
Error Type B at Line 6
Error Type A at Line 9
Error Type A at Line 22
Error Type B at Line 41
Error Type B at Line 44
Error Type B at Line 61
Error Type B at Line 64
Error Type A at Line 65
